gccida/g2/reorder_blocks_0
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reorder_blocks_0/src/function.c:6426:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reorder_blocks_0/src/function.c:6461:20: error: expected expression
v10 = ( tree_node *)v9[5]; 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reorder_blocks_0/src/function.c:6461:9: error: use of undeclared identifier 'tree_node'
v10 = ( tree_node *)v9[5]; 
        ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reorder_blocks_0/src/obj/function.o] Error 1
